# EMLife-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Src/: hEMLife.h  headEML.h  main.cpp
Src/Class/: GameDrawSet.cpp  GameDrawWord.cpp  GameMap.cpp  game.cpp  gameDraw.cpp  gameFge.cpp
Src/Draw/: gameDraw.cpp  gameDrawSet.cpp  gameDrawWord.cpp  hDraw.h
Src/Game/: game.cpp  hGame.h
Src/Icon/: icon.rc  icon.sh
Src/Map/: gameFge.cpp  gameMap.cpp  hMap.h
Src/Record/: gameInput.cpp  gameRecord.cpp  hRecord.h
include/EMLife/: EMLife.h  draw.h  game.h  map.h  record.h
res/assets/: setting.json
res/icon/: icon.bat  icon.rc
src/: main.cpp
src/draw/: gameDraw.cpp  gameDrawSet.cpp  gameDrawWord.cpp
src/game/: game.cpp
src/map/: gameFge.cpp  gameMap.cpp
src/record/: gameInput.cpp  gameRecord.cpp
